--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -8,9 +7,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="imageContainer">
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
-
 </body>
 
 </html>
