--- a/main.html
+++ b/main.html
@@ -7,9 +7,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="imageContainer">
-		
+	<div class="imageContainer img">
+		<img src="" alt="img">
 	</div>
+	<table>
+		<tr>
+			<td><img src="" alt="img"></td>
+			<td><img src="" alt="img"></td>
+			<td><img src="" alt="img"></td>
+		</tr>
+	</table>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 </body>
