--- a/main.html
+++ b/main.html
@@ -13,7 +13,12 @@
 	<table>
 		<tr>
 			<td><img src="" alt="img"></td>
+			<td>2</td>
 			<td><img src="" alt="img"></td>
+		</tr>
+		<tr>
+			<td><img src="" alt="img"></td>
+			<td>2</td>
 			<td><img src="" alt="img"></td>
 		</tr>
 	</table>
